z index fixes, and hide overflow

--- a/src/app/sections/sections.component.scss
+++ b/src/app/sections/sections.component.scss
@@ -35,7 +35,7 @@ $background: linear-gradient(
   position: relative;
   width: 100%;
   height: 450vh;
-  // overflow: hidden;
+  overflow: hidden;
   background: $background;
   background-repeat: no-repeat;
   animation: gradient 30s linear infinite;
@@ -150,6 +150,7 @@ $background: linear-gradient(
 //Navbar
 .navbar {
   display: flex;
+  position: fixed;
   font-size: 1.3rem;
   font-weight: 700;
   top: 0;
@@ -160,6 +161,8 @@ $background: linear-gradient(
   align-items: center;
   background-color: transparent;
   padding: 0.7% 5% 0% 5%;
+  z-index: 10000;
+  pointer-events: none;
 
   .navbar-left {
     flex: 0 0 calc($navbar-height * 1.6);
@@ -176,6 +179,7 @@ $background: linear-gradient(
     margin: 0;
     border-radius: 50%;
     overflow: hidden;
+    pointer-events: auto;
 
     .logo-link {
       display: block;
@@ -186,6 +190,7 @@ $background: linear-gradient(
       background-position: center;
       background-repeat: no-repeat;
       cursor: pointer;
+      pointer-events: auto;
     }
   }
 
@@ -200,6 +205,7 @@ $background: linear-gradient(
     outline: 4px solid #f2e900;
     top: 0;
     margin: 0;
+    pointer-events: auto;
     -webkit-clip-path: polygon(
       22.3333333333px 0,
       100% 0,
@@ -435,7 +441,7 @@ $background: linear-gradient(
 
 .navbar-links li a:hover {
   color: #02d7f2;
-  font-weight: lighter;
+  font-weight: 300;
   letter-spacing: 0.15em;
   position: relative;
   animation: glitch-skew 1s infinite linear alternate-reverse;
